# amazon-neptune-samples

./: AMAZON-NEPTUNE-DEVELOPER-RESOURCES.md  CONTRIBUTING.md  README.md  aws_ec2_instance_prices.py  aws_regions.py  aws_services.py  enum_aws_regions.py  enum_vertex_edge_labels.py  gremlin_interface.py  main.py  requirements.txt
1g-playground/: README.md  pom.xml
1g-playground/1g-playground-cli/: pom.xml
amazon-neptune-and-aws-cdk-for-amundsen/: README.md  THIRD-PARTY-LICENSES  cdk.json  package-lock.json  package.json
investment-analysis-on-edgar-using-vss/: README.md  requirements.txt  settings.py
neptune-REST-IAM/: .gitignore  .prettierrc  README.md  cdk.json  deploy.bash  package.json  tsconfig.json  tslint.json  webpack.config.js
neptune-analytics-graphstorm-fraud-detection/: .gitignore  0-Data-Preparation.ipynb  1-SageMaker-Setup.ipynb  2-Deploy-Execute-Pipeline.ipynb  3-Use-Embeddings-Locally.ipynb  4-Import-Embeddings-to-Neptune-Analytics.ipynb  5-Explore-With-Neptune-Analytics.ipynb  README.md  deploy_fraud_detection_pipeline.sh  graph_data_preprocessor_neptune.py  ieee_cis_nc_inference.yaml  ieee_cis_nc_training.yaml  requirements.txt
neptune-analytics-graphstorm-fraud-detection/neptune-gs/: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
neptune-analytics-graphstorm-fraud-detection/neptune-gs/neptune_gs/: attach_gs_data.py  aws_utils.py  create_gconstruct.py  fs_handler.py
neptune-analytics-graphstorm-fraud-detection/neptune-gs/test/: conftest.py  test_attach_gs_data.py  test_create_gconstruct.py  test_fs_handler.py  test_write_joined_data.py
neptune-database-graphstorm-online-inference/: README.md  requirements-ndb.txt
neptune-flink-streaming/: .gitignore  LICENSE  README.md
neptune-locust/: .gitignore  README.md  pyproject.toml  requirements.txt
neptune-locust/examples/: bolt_locustfile.py  gremlindriver_locustfile.py  neptuneuser_gremlin_locustfile.py  neptuneuser_oc_locustfile.py
neptune-locust/neptune_locust/users/: BoltUser.py  GremlinDriverUser.py  NeptuneBoltAuthToken.py  NeptuneUser.py  __init__.py
neptune-prototyping-with-agents/: .env.example  .gitignore  README.md  full_end_to_end_workflow.py  requirements.txt
neptune-sagemaker/: README.md
neptune-workbench-cloudformation/: README.md  neptune-workbench-stack.yaml
opencypher/: Cheatsheet.md
pg-schema-for-rdf/: README.md  requirements.txt
(+654 files in other folders)
